comment out leaflet-src.js

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js"></script>
   <script src="js/autosize.js"></script>
-  <script src="js/leaflet-src.js"></script>
+  <!-- script src="js/leaflet-src.js"></script -->
   <script src="js/leaflet.ajax.js"></script>  
   <script src="js/leaflet.groupedlayercontrol.js"></script>
   <script>
