--- a/index.html
+++ b/index.html
@@ -37,19 +37,27 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js"></script>
   <script src="js/autosize.js"></script>
+
   <!-- script src="js/leaflet-src.js"></script -->
   <script src="js/leaflet.ajax.js"></script>  
   <script src="js/leaflet.groupedlayercontrol.js"></script>
+
+  <!-- add editing tools -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.css"/>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.js"></script>
+
   <script>
     Autosize.enable();
-    // var map = L.map('map').setView([51.05, -114.05], 10);
+
     var map = L.map('map').setView([13.736717,100.523186], 10);
 
+    // BASE layer
     var osm = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
       attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
     })
     .addTo(map);
 
+    // OVERLAYERS
     var prov_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
       layers: '01-Province',
       format: 'image/png',
@@ -178,6 +186,16 @@
       attribution: "FMIS@MP"
     });
 
+    // FeatureGroup is to store editable layers
+    var drawnItems = new L.FeatureGroup();
+    map.addLayer(drawnItems);
+    var drawControl = new L.Control.Draw({
+      edit: {
+        featureGroup: drawnItems
+      }
+    });
+    map.addControl(drawControl);
+
     // Overlay layers are grouped
     var groupedOverlays = {
       "ขอบเขตการปกครอง": {
@@ -198,6 +216,9 @@
         "เขตรักษาพันธุ์สัตว์ป่า": wlife_wms,
         "เขตห้ามล่าสัตว์ป่า": nhunt_wms,
         "ส.ป.ก.": spk_wms
+      },
+      "Edit Map": {
+        "Draw Layer": drawnItems 
       }
     };
 
@@ -207,7 +228,12 @@
 
     // Use custom grouped layer control
     var layerControl = L.control.groupedLayers(baseMaps,groupedOverlays);
-    map.addControl(layerControl);    
+    map.addControl(layerControl);
+
+    map.on(L.Draw.Event.CREATED, function (event) {
+        var layer = event.layer;
+        drawnItems.addLayer(layer);
+    });
 
   </script>
 </body>
