--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <title>Leaflet</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
   <style>
     body {
@@ -17,6 +16,18 @@
       width: 100%;
       height: 100%;
     }
+    .leaflet-control-layers-group-name {
+      font-weight: bold;
+      margin-bottom: .2em;
+      margin-left: 3px;
+    }
+    .leaflet-control-layers-group {
+      margin-bottom: .5em;
+    }
+    .leaflet-control-layers-scrollbar {
+      overflow-y: scroll;
+      padding-right: 10px;
+    }
   </style>
 </head>
 <body>
@@ -25,16 +36,203 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js"></script>
   <script src="js/autosize.js"></script>
+
+  <!-- script src="js/leaflet-src.js"></script -->
+  <script src="js/leaflet.ajax.js"></script>  
+  <script src="js/leaflet.groupedlayercontrol.js"></script>
+
+  <!-- add editing tools -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.css"/>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.js"></script>
+
   <script>
     Autosize.enable();
-    // var map = L.map('map').setView([51.05, -114.05], 10);
+
     var map = L.map('map').setView([13.736717,100.523186], 10);
 
-    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+    // BASE layer
+    var osm = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
       attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
     })
-      .addTo(map);
+    .addTo(map);
 
+    // OVERLAYERS
+    var prov_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
+      layers: '01-Province',
+      format: 'image/png',
+      transparent: true,
+      opacity: 0.5,
+      version: '1.1.0',
+      attribution: "FMIS@MP"
+    });
+
+    var amp_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
+      layers: '02-District',
+      format: 'image/png',
+      transparent: true,
+      opacity: 0.5,
+      version: '1.1.0',
+      attribution: "FMIS@MP"
+    });    
+
+    var tam_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
+      layers: '03-Subdistrict',
+      format: 'image/png',
+      transparent: true,
+      opacity: 0.5,
+      version: '1.1.0',
+      attribution: "FMIS@MP"
+    });    
+
+    var moo_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
+      layers: '04-Village',
+      format: 'image/png',
+      transparent: true,
+      opacity: 0.75,
+      version: '1.1.0',
+      attribution: "FMIS@MP"
+    });
+
+    // Country resources
+    var stream_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
+      layers: '05-Stream',
+      format: 'image/png',
+      transparent: true,
+      opacity: 0.75,
+      version: '1.1.0',
+      attribution: "FMIS@MP"
+    });
+
+    var stream_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
+      layers: '05-Stream',
+      format: 'image/png',
+      transparent: true,
+      opacity: 0.75,
+      version: '1.1.0',
+      attribution: "FMIS@MP"
+    });
+
+    var soil_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
+      layers: '06-Soil',
+      format: 'image/png',
+      transparent: true,
+      opacity: 0.75,
+      version: '1.1.0',
+      attribution: "FMIS@MP"
+    });
+
+    var road_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
+      layers: '13-Road',
+      format: 'image/png',
+      transparent: true,
+      opacity: 0.75,
+      version: '1.1.0',
+      attribution: "FMIS@MP"
+    });
+
+    var rail_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
+      layers: '14-Railway',
+      format: 'image/png',
+      transparent: true,
+      opacity: 0.75,
+      version: '1.1.0',
+      attribution: "FMIS@MP"
+    });
+
+    var water_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
+      layers: '07-Watershed',
+      format: 'image/png',
+      transparent: true,
+      opacity: 0.75,
+      version: '1.1.0',
+      attribution: "FMIS@MP"
+    });
+
+    // State Lands
+    var npark_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
+      layers: '08-Natural-Park',
+      format: 'image/png',
+      transparent: true,
+      opacity: 0.75,
+      version: '1.1.0',
+      attribution: "FMIS@MP"
+    });
+
+    var wlife_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
+      layers: '10-Wildlife',
+      format: 'image/png',
+      transparent: true,
+      opacity: 0.75,
+      version: '1.1.0',
+      attribution: "FMIS@MP"
+    });
+
+    var nhunt_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
+      layers: '11-Non-Hunting',
+      format: 'image/png',
+      transparent: true,
+      opacity: 0.75,
+      version: '1.1.0',
+      attribution: "FMIS@MP"
+    });
+
+    var spk_wms = L.tileLayer.wms("http://fmis.forest.ku.ac.th:8080/geoserver/MP/wms", {
+      layers: '12-Agri-Land-Reform',
+      format: 'image/png',
+      transparent: true,
+      opacity: 0.75,
+      version: '1.1.0',
+      attribution: "FMIS@MP"
+    });
+
+    // FeatureGroup is to store editable layers
+    var drawnItems = new L.FeatureGroup();
+    map.addLayer(drawnItems);
+    var drawControl = new L.Control.Draw({
+      edit: {
+        featureGroup: drawnItems
+      }
+    });
+    map.addControl(drawControl);
+
+    // Overlay layers are grouped
+    var groupedOverlays = {
+      "ขอบเขตการปกครอง": {
+        "หมู่บ้าน": moo_wms,
+        "ตำบล": tam_wms,
+        "อำเภอ": amp_wms,
+        "จังหวัด": prov_wms
+      },
+      "ทรัพยากรธรรมชาติ": {
+        "Stream": stream_wms,
+        "Soil": soil_wms,
+        "Watershed": water_wms,
+        "Road": road_wms,
+        "Railway": rail_wms
+      },
+      "ที่ดินรัฐ": {
+        "เขตอุทยานแห่งชาติ": npark_wms,
+        "เขตรักษาพันธุ์สัตว์ป่า": wlife_wms,
+        "เขตห้ามล่าสัตว์ป่า": nhunt_wms,
+        "ส.ป.ก.": spk_wms
+      },
+      "Edit Map": {
+        "Draw Layer": drawnItems 
+      }
+    };
+
+    var baseMaps = {
+      "OSM": osm
+    };
+
+    // Use custom grouped layer control
+    var layerControl = L.control.groupedLayers(baseMaps,groupedOverlays);
+    map.addControl(layerControl);
+
+    map.on(L.Draw.Event.CREATED, function (event) {
+        var layer = event.layer;
+        drawnItems.addLayer(layer);
+    });
   </script>
 </body>
 </html>
